# lib3mf

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  Lib3MF-1.0.1.docx  Lib3MF-1.0.docx  Lib3MF-1.1.67.docx  Lib3MF-1.docx  License.md  License.txt  README.md  Readme.md  SetupWriteRead1.3mf  SetupWriteRead2.3mf  SetupWriteRead3.3mf  SetupWriteRead4.3mf  SetupWriteRead5.3mf  codecov.yml  conanfile.py  emscripten_build_notes.txt  lib3MF.pc.in  lib3mf.pc.in  lib3mf_version_update.py  nonrootmodels.3mf  outProduction.3mf  pom.xml  v093reout.3mf  vcpkg.json
CI/: Dockerfile  (+5 more)
Fuzz/: CMakeLists.txt  Fuzz_ReadFromBuffer.cpp
SDK/CPackExamples/Cpp/: CMakeLists.txt  GenerateVS2019.bat
SDK/Examples/Cpp/: CMakeLists.txt  GenerateVS2015.bat  GenerateVS2017.bat
SDK/Examples/CppNew/: CMakeLists.txt  GenerateMake.sh
Tests/: CMakeLists.txt
Tests/CPP/Include/: UnitTest_Utilities.h
Tests/CPP/Source/: UnitTest_AllTests.cpp  UnitTest_Geometry.cpp  UnitTest_Mesh.cpp  UnitTest_MeshFormat_STL.cpp  UnitTest_Model.cpp  UnitTest_ZIP.cpp
Tests/CPP_Bindings/: CMakeLists.txt
Tests/CPP_Bindings/Include/: UnitTest_EncryptionUtils.h  UnitTest_Utilities.h
Tests/CPP_Bindings/Source/: AllTests.cpp  Attachments.cpp  BaseMaterialGroup.cpp  BeamLattice.cpp  BeamSets.cpp  BuildItems.cpp  ColorGroup.cpp  CompositeMaterials.cpp  CustomAttribute.cpp  CustomAttributes.cpp  EncryptionMethods.cpp  MergeModels.cpp  MeshObject.cpp  MetaData.cpp  MetaDataGroup.cpp  Model.cpp  MultiProperties.cpp  Object.cpp  Outbox.cpp  ProductionExtension.cpp  ProgressCallback.cpp  Properties.cpp  Reader.cpp  SecureContent.cpp  SecureContent.cpp.orig  Slice.cpp  SliceStack.cpp  TextureProperty.cpp  TextureResources.cpp  TriangleSets.cpp  UnitTest_AllTests.cpp  UnitTest_Attachments.cpp  UnitTest_BaseMaterialGroup.cpp  UnitTest_BeamLattice.cpp  UnitTest_BuildItems.cpp  UnitTest_ColorGroup.cpp  UnitTest_EncryptionUtils.cpp  UnitTest_MeshObject.cpp  UnitTest_MetaData.cpp  UnitTest_MetaDataGroup.cpp  (+15 more)
Tests/TestFiles/Attachments/: withPackageThumbnail.3mf
Tests/TestFiles/BeamLattice/: BeamSet_Not_Unique.3mf  BeamSet_Unique.3mf  Box_Attributes_Negative_1.3mf  Box_Attributes_Negative_2.3mf  Box_Attributes_Positive.3mf
Tests/TestFiles/BuildItems/: WagonWithWheels.3mf
Tests/TestFiles/CPP_UnitTests/: 3mfbase11_AdjMount.3mf  Sphere.stl
Tests/TestFiles/CustomAttribute/: CustomAttribute_BaseMaterials.3mf  CustomAttribute_Build.3mf  CustomAttribute_BuildItem.3mf  CustomAttribute_Model.3mf  CustomAttribute_Object.3mf  CustomAttribute_Object_Fail.3mf  CustomAttribute_Resources.3mf
Tests/TestFiles/MetaData/: MetaData_BuildItem_DefaultNS.3mf  MetaData_Model_DefaultNS.3mf  MetaData_Model_DefaultNS_Fail.3mf  MetaData_Model_VendorNS.3mf  MetaData_Model_VendorNS_Fail.3mf  MetaData_Object_DefaultNS.3mf  MetaData_Object_DefaultNS_Fail.3mf  MetaData_Object_VendorNS.3mf  MetaData_Object_VendorNS_Fail.3mf
Tests/TestFiles/Mixed/: MustWarnOrFail.3mf
Tests/TestFiles/Models/: PartsForBoundingBox.3mf  WithSomeResources.3mf  platform.3mf
Tests/TestFiles/Nurbs/: nurbscylinder.3mf
Tests/TestFiles/OPC_Issues/: Box_ExtensionCustom.3mf  Box_OverridePositive.3mf
Tests/TestFiles/Objects/: HelixWithThumbnail.3mf  HelixWithThumbnail_IncorrectRelationship.3mf
Tests/TestFiles/Production/: 2ProductionBoxes.3mf  Replaces_PP_701_04.3mf  detachedmodel.3mf
Tests/TestFiles/Properties/: MultiProperty_Out_incorrect.3mf  PyramidWithProperties.3mf  PyramidWithoutProperties.3mf
Tests/TestFiles/Reader/: Box.3mf  CS-1111_3dmodel-e1r1_other-e1r1.3mf  DOS-FUZ-LIB3MF.3mf  GEN-C-ADA-COMPONENT-TRANSFORM-0.3mf  GEN-M-ADA-ITEM-TRANSFORM-0.3mf  Globo.3mf  N_XXX_0422_01.3mf  P_XXM_0519_01.3mf  Pyramid.3mf  Pyramid.stl  PyramidVolume.3mf  cam_51476_test.3mf
Tests/TestFiles/RequiredExtensions/: NotListed.3mf
Tests/TestFiles/Resources/: attachment.xml
Tests/TestFiles/Schema/: .gitignore  beamlattice_2017_02.xsd  prepare.bat
Tests/TestFiles/SecureContent/: WriteSecureContent.3mf  keystore.3mf  keystore_compressed.3mf  keystore_encrypted.3mf  keystore_encrypted_compressed.3mf  keystore_test_for_compression.3mf  negative_keystore_empty.3mf  negative_keystore_encrypted_empty.3mf  negative_keystore_encrypted_invalid_attributes.3mf  negative_keystore_encrypted_missing_attributes.3mf  negative_keystore_invalid_attributes.3mf  negative_keystore_missing_attributes.3mf  sample.pem  sample.pub.pem
Tests/TestFiles/Slice/: Expected_Slice_Hierarchy.3mf  MultiSliceStack_NoFile.3mf  Slice_MustFail_TooRefsTooDeep.3mf  UniSliceStack_TwoFiles.3mf
Tests/TestFiles/Volumetric/: Boundary.3mf  ColoredVolume.3mf  Cube.3mf  RadialRadiator.3mf  template.3mf
Tests/TestFiles/v093/: Texture_093.3mf
Tests/codecoverage/: run_codecoverage.sh
Tests/memcheck/: conditional.valgrind.supp
UnitTests/: CMakeLists.txt
UnitTests/CPP/: CMakeLists.txt
UnitTests/CPP/Include/: UnitTest_Utilities.h
UnitTests/CPP/Source/: UnitTest_AllTests.cpp  UnitTest_Geometry.cpp  UnitTest_Mesh.cpp  UnitTest_MeshFormat_STL.cpp  UnitTest_Model.cpp  UnitTest_ModelFactory.cpp  UnitTest_ZIP.cpp
UnitTests/CPP_Bindings/: CMakeLists.txt
UnitTests/CPP_Bindings/Include/: UnitTest_Utilities.h
UnitTests/CPP_Bindings/Source/: UnitTest_AllTests.cpp  UnitTest_Attachments.cpp  UnitTest_BaseMaterial.cpp  UnitTest_BaseMaterialGroup.cpp  UnitTest_BeamLattice.cpp  UnitTest_BeamSets.cpp  UnitTest_BuildItems.cpp  UnitTest_CompositeMaterials.cpp  UnitTest_MeshObject.cpp  UnitTest_MetaData.cpp  UnitTest_MetaDataGroup.cpp  UnitTest_Model.cpp  UnitTest_MultiProperties.cpp  UnitTest_Nurbs.cpp  UnitTest_Object.cpp  UnitTest_ProgressCallback.cpp  (+9 more)
UnitTests/C_Interface/: CMakeLists.txt
UnitTests/Include/: UnitTest_Utilities.h
UnitTests/Source/: UnitTest_AllTests.cpp  UnitTest_Attachments.cpp  UnitTest_BeamLattice.cpp  UnitTest_Extensions.cpp  UnitTest_Production.cpp  UnitTest_ProgressCallback.cpp  UnitTest_ReadWrite.cpp  UnitTest_ReaderStrictMode.cpp  UnitTest_Slice.cpp  UnitTest_Textures.cpp  UnitTest_Thumbnails.cpp
(+1810 files in other folders)
